src/components/common/TestnetLabel/TestnetLabel.module.css
.testnetLabel {
  display: flex;
  align-items: center;
  gap: 8px;
  border-radius: 20px;
  cursor: pointer;
  font-weight: 400 !important;
}

.labelButton {
  all: unset;
  position: relative;
  padding: 6px 12px;
  background: transparent;
  border-radius: 20px;
  transition: .5s all ease;
}

.labelButton:hover {
  background: var(--background-grey-light);
}

.labelMenu {
  top: 100%;
  left: 0;
  width: 100%;
}

